--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -15,13 +15,28 @@ jobs:
       - name: Sjekk ut koden
         uses: actions/checkout@v2
 
-      - name: Kompiler
-        uses: navikt/pb-common-gh-actions/build@v1
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.13
+
+      - name: Finn cache-variabler
+        uses: navikt/pb-common-gh-actions/cache-prep@v2
+
+      - name: Sett opp cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ env.CACHE_PATHS }}
+          key: ${{ runner.os }}${{ env.CACHE_KEY_NAMESPACE }}${{ hashFiles(env.CACHE_KEY_HASHED_PATH) }}
+
+      - name: Bygg prosjekt og kjør tester
+        uses: navikt/pb-common-gh-actions/build@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Bygg, tag og push Docker image
-        uses: navikt/pb-common-gh-actions/docker-publish@v1
+        uses: navikt/pb-common-gh-actions/docker-publish@v2
         with:
           TAG_LATEST: "true"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -34,14 +49,17 @@ jobs:
           git tag $TAG
           git push origin $TAG
 
-      - name: Sjekk om slack-integrering er mulig
-        run: echo "::set-env name=SLACK_URL_SPECIFIED::$([[ ! -z $WEBHOOK_URL ]] && echo 'true' || echo 'false')"
-        env:
-          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
+      - name: Sjekk om prodsetting er mulig
+        run: echo "::set-env name=PROD_SBS_VARS_TEMPLATE_DEFINED::$([[ -f ./nais/prod-sbs/default.json ]] && echo 'true' || echo 'false')"
 
-      - name: Vis deploy-knapper i slack
-        if: env.SLACK_URL_SPECIFIED == 'true'
-        uses: navikt/deploy-trigger-slack-integration@v1
-        with:
-          slack_channel: "#dittnav-deploy-actions"
-          webhook_url: ${{ secrets.WEBHOOK_URL }}
+      - name: 'Deploy-er til default i prod-sbs'
+        if: env.PROD_SBS_VARS_TEMPLATE_DEFINED == 'true'
+        uses: 'nais/deploy/actions/deploy@v1'
+        env:
+          REF: ${{ github.sha }}
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-sbs
+          RESOURCE: ./nais/nais.yaml
+          VARS: ./nais/prod-sbs/default.json
+          VAR: version=${{ env.IMAGE }}
+          PRINT_PAYLOAD: true
