--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -39,3 +39,9 @@ spec:
     requests:
       cpu: "1"
       memory: 2560Mi
+  kafka:
+    pool: nav-dev
+  accessPolicy:
+    outbound:
+      external:
+        - host: kafka-schema-registry.nais-q.adeo.no
