--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dittnav-periodic-metrics-reporter
   namespace: {{namespace}}
   labels:
-    team: personbruker
+    team: min-side
 spec:
   image: {{version}}
   port: 8080
