Revert "Endrer teamnavn, for å se om Kafka-secrets blir mounted riktig"
This reverts commit b26a781a8987ba2bb7b564f96372418403f0c70b.

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dittnav-periodic-metrics-reporter
   namespace: {{namespace}}
   labels:
-    team: min-side
+    team: personbruker
 spec:
   image: {{version}}
   port: 8080
